# optee_examples

aes_securestorage/: Android.mk  CMakeLists.txt
aes_securestorage/host/: Makefile  main.cpp
aes_securestorage/host/include/: AesFileEncryptor.h  AesSecureStorageFacade.h  FileUtils.h  HexConverter.h  KeyManager.h  OpTeeContextManager.h  OpTeeException.h
aes_securestorage/host/src/: AesFileEncryptor.cpp  AesSecureStorageFacade.cpp  FileUtils.cpp  HexConverter.cpp  KeyManager.cpp  OpTeeContextManager.cpp
aes_securestorage/ta/: Android.mk  Makefile  TeeUtils.c  TeeUtils.h  aes_secure_storage_ta.c  aes_secure_storage_ta.c.txt  asymmetric_key_ops.c  sub.mk  symmetric_key_ops.c  user_ta_header_defines.h
aes_securestorage/ta/include/: aes_secure_storage_ta.h  asymmetric_key_ops.h  symmetric_key_ops.h
hello_world2/: Android.mk  CMakeLists.txt  Makefile
hello_world2/host/: Makefile  main.c
